readme moved to wiki

--- a/BeaKona.AutoInterfaceGenerator/AutoInterfaceResource.resx
+++ b/BeaKona.AutoInterfaceGenerator/AutoInterfaceResource.resx
@@ -160,7 +160,7 @@
     <value>Type does not implement interface '{0}'.</value>
   </data>
   <data name="AG05_title" xml:space="preserve">
-    <value>Type does not implement defined interface(s).</value>
+    <value>Type does not implement a defined interface(s).</value>
   </data>
   <data name="AG06_description" xml:space="preserve">
     <value />
@@ -187,7 +187,7 @@
     <value>Only class, record or struct can auto-implement interface.</value>
   </data>
   <data name="AG08_title" xml:space="preserve">
-    <value>Type is not a class, record or struct.</value>
+    <value>Type is not a class, record, or struct.</value>
   </data>
   <data name="AG09_description" xml:space="preserve">
     <value />
